new frame and displays

--- a/Deblending/scarlet_tutorial.ipynb
+++ b/Deblending/scarlet_tutorial.ipynb
@@ -16,11 +16,13 @@
     "After working through this tutorial you should be able to: \n",
     "1. Configure and run _scarlet_ on a test list of objects;\n",
     "2. Understand its various model assumptions and applied constraints.\n",
+    "3. Use specific configurations to fit objects of different nature (stars, galaxies, LSBG)\n",
+    "4. Bonus: we would like to give users a sense of how they can use their own assumptions to build models in scarlet\n",
     "\n",
     "Before attempting this tutorial it will be useful to read the [introduction](https://fred3m.github.io/scarlet/user_docs.html) to the *scarlet* User Guide, and many of the exercises below may require referencing the *scarlet* [docs](https://fred3m.github.io/scarlet/).\n",
     "\n",
     "### Logistics\n",
-    "This notebook is intended to be runnable on `lsst-lsp-stable.ncsa.illinois.edu` from a local git clone of https://github.com/LSSTScienceCollaborations/StackClub.\n",
+    "This notebook is intended to be runnable on `cori.nersc.gov` from a local git clone of https://github.com/LSSTDESC/StackClub.\n",
     "\n",
     "## Set-up"
    ]
@@ -63,9 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Display functions\n",
-    "\n",
-    "Below are several useful functions used throughout this tutorial to visualize the data and models."
+    "We will also load the butler and various lsst packages"
    ]
   },
   {
@@ -74,43 +74,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_psfs(psfs, filters, norm=None):\n",
-    "    rows = int(np.ceil(len(psfs)/3))\n",
-    "    columns = min(len(psfs), 3)\n",
-    "    figsize = (45/columns, rows*5)\n",
-    "    fig = plt.figure(figsize=figsize)\n",
-    "    ax = [fig.add_subplot(rows, columns, n+1) for n in range(len(psfs))]\n",
-    "    for n, psf in enumerate(psfs):\n",
-    "        im = ax[n].imshow(psf, norm=norm)\n",
-    "        ax[n].set_title(\"{0}-band PSF\".format(filters[n]))\n",
-    "        plt.colorbar(im, ax=ax[n])\n",
-    "    plt.show()\n",
-    "\n",
-    "def display_diff_kernels(psf_blend, diff_kernels):\n",
-    "    model = psf_blend.get_model()\n",
-    "    for b, component in enumerate(psf_blend.components):\n",
-    "        fig = plt.figure(figsize=(15,2.5))\n",
-    "        ax = [fig.add_subplot(1,4,n+1) for n in range(4)]\n",
-    "        # Display the psf\n",
-    "        ax[0].set_title(\"psf\")\n",
-    "        _img = ax[0].imshow(psfs[b])\n",
-    "        fig.colorbar(_img, ax=ax[0])\n",
-    "        # Display the model\n",
-    "        ax[1].set_title(\"modeled psf\")\n",
-    "        _model = np.ma.array(model[b], mask=model[b]==0)\n",
-    "        _img = ax[1].imshow(_model)\n",
-    "        fig.colorbar(_img, ax=ax[1])\n",
-    "        # Display the difference kernel\n",
-    "        ax[2].set_title(\"difference kernel\")\n",
-    "        _img = ax[2].imshow(np.ma.array(diff_kernels[b], mask=diff_kernels[b]==0))\n",
-    "        fig.colorbar(_img, ax=ax[2])\n",
-    "        # Display the residual\n",
-    "        ax[3].set_title(\"residual\")\n",
-    "        residual = psfs[b]-model[b]\n",
-    "        vabs = np.max(np.abs(residual))\n",
-    "        _img = ax[3].imshow(residual, vmin=-vabs, vmax=vabs, cmap='seismic')\n",
-    "        fig.colorbar(_img, ax=ax[3])\n",
-    "        plt.show()"
+    "import numpy as np\n",
+    "from lsst.daf.persistence import Butler\n",
+    "from lsst.geom import Box2I, Box2D, Point2I, Point2D, Extent2I, Extent2D\n",
+    "from lsst.afw.image import Exposure, Image, PARENT, MultibandExposure, MultibandImage\n",
+    "from lsst.afw.detection import MultibandFootprint\n",
+    "from lsst.afw.image import MultibandExposure"
    ]
   },
   {
@@ -119,7 +88,9 @@
    "source": [
     "# Load and Display the data\n",
     "\n",
-    "The `file_path` points to a directory with 147 HSC blends from the COSMOS field detected by the LSST pipeline. Changing `idx` below will select a different blend."
+    "More information are provided in the `lsst_stack_deblender.ipynb` tutorial. \n",
+    "\n",
+    "The **butler** is used to recover data from DESC DC2 DR6 by specifying the tract, patch and filters."
    ]
   },
   {
@@ -128,31 +99,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the sample images\n",
-    "idx = 53\n",
-    "file_path = \"/project/shared/data/testdata_deblender/real_data/hsc_cosmos/not_matched\"\n",
-    "files = os.listdir(file_path)\n",
-    "data = np.load(os.path.join(file_path, files[idx]))\n",
-    "images = data[\"images\"]\n",
-    "weights = data[\"weights\"]\n",
-    "peaks = data[\"peaks\"]\n",
-    "psfs = data[\"psfs\"]\n",
-    "filters = [\"G\", \"R\", \"I\", \"Z\", \"Y\"]\n",
+    "import desc_dc2_dm_data\n",
+    "butler = desc_dc2_dm_data.get_butler(\"2.2i_dr6_wfd\")\n",
+    "dataId = {\"tract\": 3830, \"patch\": \"4,4\"}\n",
+    "filters = \"ugrizy\"\n",
+    "coadds = [butler.get(\"deepCoadd_calexp\", dataId, filter=f) for f in filters]\n",
+    "coadds = MultibandExposure.fromExposures(filters, coadds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then display the patch of data using display functions built-in in scarlet. The `norm` is used to create a colour scaling that avoids whitening the center of bright-ish objects also known as _Luptonisation_. \n",
     "\n",
-    "# Only a rough estimate of the background is needed\n",
-    "# to initialize and resize the sources\n",
-    "bg_rms = np.std(images, axis=(1,2))\n",
-    "print(\"Background RMS: {0}\".format(bg_rms))\n",
-    "\n",
-    "# Use Asinh scaling for the images\n",
-    "norm = AsinhMapping(minimum=images.min(), stretch=images.max()/20, Q=10)\n",
-    "\n",
-    "# Convert the image to an RGB image\n",
-    "img_rgb = scarlet.display.img_to_rgb(images, norm=norm)\n",
-    "plt.imshow(img_rgb)\n",
-    "plt.title(\"Image: {0}\".format(idx))\n",
-    "for k, src in enumerate(peaks):\n",
-    "    plt.text(src[0], src[1], str(k), color=\"blue\")\n",
+    "The `image_to_rgb` function maps multi-band arrays into 3-channel RGB images. The mapping is done automatically by default, assuming an ordering of bands from bluer to redder, but it can be customised using the `channel_map` argument."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "norm = scarlet.display.AsinhMapping(minimum=0, stretch=1, Q=10)\n",
+    "rgb_patch = scarlet.display.img_to_rgb(coadds.image.array, norm=norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize = (30,30))\n",
+    "plt.imshow(rgb_patch, origin = \"lower\")\n",
+    "plt.xticks(fontsize = 30)\n",
+    "plt.yticks(fontsize = 30)\n",
     "plt.show()"
    ]
   },
@@ -160,14 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Psf display "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can also takea  look at the `psfs`"
+    "Let's formalise the previous display procedure into a function"
    ]
   },
   {
@@ -176,7 +152,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "show_psfs(psfs, filters)"
+    "def imshow_rgb(image, norm = None, figsize = None):\n",
+    "    \"\"\"\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    image: `numpy.ndarrray`\n",
+    "        Multiband image to display\n",
+    "    norm: `scarlet.display.AsinhMapping`\n",
+    "    \"\"\"\n",
+    "    if norm == None:\n",
+    "        norm = scarlet.display.AsinhMapping(minimum=0, stretch=1, Q=10)\n",
+    "    rgb_patch = scarlet.display.img_to_rgb(image, norm=norm)\n",
+    "    if figsize == None:\n",
+    "        figsize = (30,30)\n",
+    "        \n",
+    "    plt.figure(figsize = figsize)\n",
+    "    plt.imshow(rgb_patch, origin = \"lower\")\n",
+    "    plt.xticks(fontsize = 30)\n",
+    "    plt.yticks(fontsize = 30)\n",
+    "    plt.show()\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display a subset\n",
+    "\n",
+    "Here we extract a patch from the previous image to run scarlet on."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 180\n",
+    "sampleBBox = Box2I(Point2I(16880, 19320), Extent2I(n, n))\n",
+    "\n",
+    "subset = coadds[:, sampleBBox]\n",
+    "# Due to a bug in the code the PSF isn't copied properly.\n",
+    "# The code below copies the PSF into the `MultibandExposure`,\n",
+    "# but will be unecessary in the future\n",
+    "for f in subset.filters:\n",
+    "    subset[f].setPsf(coadds[f].getPsf())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imshow_rgb(subset.image.array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Display the psfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psfs = subset.computePsfImage(Point2I(16880, 19320)).array\n",
+    "psf_norm = scarlet.display.AsinhMapping(minimum=0, stretch=0.001, Q=10)\n",
+    "imshow_rgb(psfs, norm = psf_norm)"
    ]
   },
   {
@@ -185,7 +233,10 @@
    "source": [
     "# Define the model and observation frames\n",
     "\n",
-    "A `Frame` in scarlet is the metadata that defines the hyperspectral data cube, including dimensions, wcs (optional), and the PSF (technically optional but recommended). So we need to define a frame for our model and for the `Observation`, which contains the image and variance data for the observations of the scene that we are deblending. In scarlet it is possible to deblend scenes that have observations with different instruments that have different resolutions and/or observations that have not been coadded, however that is outside the scope of this tutorial and the interested reader should be referred to https://fred3m.github.io/scarlet/tutorials/multiresolution.html.\n",
+    "A `Frame` in scarlet is the metadata that describes where the model lives. It includes the frames shape, wcs (optional), and the PSF (technically optional but strongly recommended). \n",
+    "\n",
+    "The `Observation` defines where the data lives, but also how to go from the model frame to the data. It contains the data themselves as an array but also meta-information such as channels tags, psf (technically optional but strongly recommended), wcs(optional) and weights (optional). The `Observation` needs to be matched to the `Frame` through the `match()` method. \n",
+    "In scarlet it is possible to deblend scenes that have observations with different instruments that have different resolutions and/or observations that have not been coadded by building a list of `Observation`s. The `Frame` can be automatically built from the list of `Observation`s, however that is outside the scope of this tutorial and the interested reader should be referred to https://fred3m.github.io/scarlet/tutorials/multiresolution.html.\n",
     "\n",
     "So we will create an initial model `Frame` that uses a narrow gaussian PSF and an `Observation` that consists of multiple bands of an HSC coadded image.\n",
     "\n",
@@ -198,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from functools import partial"
+    "??scarlet.psf"
    ]
   },
   {
@@ -208,8 +259,10 @@
    "outputs": [],
    "source": [
     "# Create a PSF image of a narrow gaussian to use as our image PSF\n",
-    "amplitude=1.\n",
-    "model_psf = scarlet.PSF(partial(scarlet.psf.gaussian, sigma=0.9), shape=(None,41, 41)).image * amplitude\n",
+    "\n",
+    "channels = [f for f in filters]\n",
+    "from functools import partial\n",
+    "model_psf = partial(scarlet.psf.gaussian, sigma=0.9)\n",
     "model_psf /= model_psf.sum()\n",
     "# Make sure that the observation PSF is normalized (otherwise the scaling in PSF matching might be off)\n",
     "psfs = psfs / psfs.sum(axis=(1, 2))[:, None, None]\n",
@@ -383,9 +436,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LSST",
+   "display_name": "desc-dia",
    "language": "python",
-   "name": "lsst"
+   "name": "desc-dia"
   },
   "language_info": {
    "codemirror_mode": {
@@ -397,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
