--- a/Deblending/lsst_stack_deblender.ipynb
+++ b/Deblending/lsst_stack_deblender.ipynb
@@ -608,9 +608,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "desc-stack-weekly-latest",
+   "display_name": "desc-stack-dev",
    "language": "python",
-   "name": "desc-stack-weekly-latest"
+   "name": "desc-stack-dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -622,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
