--- a/Deblending/lsst_stack_deblender.ipynb
+++ b/Deblending/lsst_stack_deblender.ipynb
@@ -604,13 +604,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "desc-stack-dev",
+   "display_name": "desc-dia",
    "language": "python",
-   "name": "desc-stack-dev"
+   "name": "desc-dia"
   },
   "language_info": {
    "codemirror_mode": {
@@ -622,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
