--- a/Deblending/scarlet_tutorial.ipynb
+++ b/Deblending/scarlet_tutorial.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Deblending with *Scarlet*\n",
     "<br>Owner(s): **Fred Moolekamp** ([@fred3m](https://github.com/LSSTScienceCollaborations/StackClub/issues/new?body=@fred3m))\n",
-    "<br>Last Verified to Run: **2020-07-10**\n",
+    "<br>Last Verified to Run: **2020-01-12**\n",
     "<br>Verified Stack Release: **v20.0.0**\n",
     "\n",
     "The purpose of this tutorial is to familiarize you with the basics of using *scarlet* to model blended scenes, and how tweaking various objects and parameters affects the resulting model. A tutorial that is more specific to using scarlet in the context of the LSST DM Science Pipelines is also available.\n",
@@ -300,10 +300,15 @@
     "model_psf = scarlet.GaussianPSF(sigma=0.9)\n",
     "\n",
     "# Create the initial frame (metadata for the model).\n",
-    "frame = scarlet.Frame(images.shape, psfs=model_psf, channels=filters)\n",
+    "frame = scarlet.Frame(images.shape, \n",
+    "                      psfs=model_psf, \n",
+    "                      channels=filters)\n",
     "\n",
     "# Create our observation\n",
-    "observation = scarlet.Observation(images, psfs=scarlet.ImagePSF(psfs), channels=filters, weights=weights)"
+    "observation = scarlet.Observation(images, \n",
+    "                                  psfs=scarlet.ImagePSF(psfs), \n",
+    "                                  channels=filters, \n",
+    "                                  weights=weights)"
    ]
   },
   {
@@ -444,7 +449,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sources = [scarlet.ExtendedSource(frame, (c['y'], c['x']), observation) for c in cat]\n",
+    "sources = [scarlet.ExtendedSource(frame, \n",
+    "                                  (c['y'], c['x']), \n",
+    "                                  observation) for c in cat]\n",
     "\n",
     "scarlet.display.show_scene(sources, \n",
     "                           norm = norm, \n",
@@ -539,7 +546,8 @@
     "# Fit the data until the relative error is <= 1e-3,\n",
     "# for a maximum of 200 iterations\n",
     "%time blend.fit(200, e_rel = 1e-3)\n",
-    "print(\"scarlet ran for {0} iterations to logL = {1}\".format(len(blend.loss), -blend.loss[-1]))\n",
+    "print(\"scarlet ran for {0} iterations to logL = {1}\".format(len(blend.loss), \n",
+    "                                                            -blend.loss[-1]))\n",
     "plt.plot(-np.array(blend.loss))\n",
     "plt.xlabel('Iteration')\n",
     "plt.ylabel('log-Likelihood')"
@@ -664,7 +672,8 @@
     "            # most astronomical sources are monotonically decreasing\n",
     "            # from their center\n",
     "            constraints.append(\n",
-    "                MonotonicityConstraint(neighbor_weight=monotonic, min_gradient=min_grad)\n",
+    "                MonotonicityConstraint(neighbor_weight=monotonic, \n",
+    "                                       min_gradient=min_grad)\n",
     "            )\n",
     "\n",
     "\n",
@@ -681,7 +690,10 @@
     "            NormalizationConstraint(\"max\"),\n",
     "        ]\n",
     "        morph_constraint = ConstraintChain(*constraints)\n",
-    "        image = Parameter(image, name=\"image\", step=1e-2, constraint=morph_constraint)\n",
+    "        image = Parameter(image, \n",
+    "                          name=\"image\", \n",
+    "                          step=1e-2, \n",
+    "                          constraint=morph_constraint)\n",
     "\n",
     "        self.pixel_center = np.round(center).astype(\"int\")\n",
     "        if shifting:\n",
@@ -789,18 +801,25 @@
     "skymap = butler.get('deepCoadd_skyMap')\n",
     "radec = lsst.geom.SpherePoint(56.811321, -31.123123, lsst.geom.degrees)\n",
     "center = skymap.findTract(radec).getWcs().skyToPixel(radec)\n",
-    "bbox = lsst.geom.BoxI(lsst.geom.Point2I((center.x - cutout_size*0.5, center.y - cutout_size*0.5)), cutout_extent)\n",
+    "bbox = lsst.geom.BoxI(lsst.geom.Point2I((center.x - cutout_size*0.5, \n",
+    "                                         center.y - cutout_size*0.5)), \n",
+    "                      cutout_extent)\n",
     "\n",
-    "cutouts = [butler.get(\"deepCoadd_sub\", bbox=bbox, tract=4639, patch='1,0', filter=band) for band in \"ugrizy\"]\n",
+    "cutouts = [butler.get(\"deepCoadd_sub\", \n",
+    "                      bbox=bbox, \n",
+    "                      tract=4639, \n",
+    "                      patch='1,0', \n",
+    "                      filter=band) for band in \"ugrizy\"]\n",
     "coadds = MultibandExposure.fromExposures(\"ugrizy\", cutouts)\n",
     "\n",
     "# PSF\n",
-    "psfs = coadds.computePsfImage(Point2I(center.x - cutout_size*0.5, center.y - cutout_size*0.5)).array\n",
+    "psfs = coadds.computePsfImage(Point2I(center.x - cutout_size*0.5, \n",
+    "                                      center.y - cutout_size*0.5)).array\n",
     "#Cube image\n",
     "cube = coadds.image.array\n",
     "#Weights\n",
     "var2 = coadds.variance.array\n",
-    "weights2 = 1 / (var ** 2)"
+    "weights2 = 1 / (var2 ** 2)"
    ]
   },
   {
@@ -840,15 +859,18 @@
    "outputs": [],
    "source": [
     "# Create a PSF image of a narrow gaussian to use as our image PSF\n",
-    "channels = \"...\"\n",
-    "# Create a model psf using `scarlet.PSF` object\n",
-    "model_psf = \"...\"\n",
+    "channels = [\"u\", \"g\", \"r\", \"i\", \"z\", \"y\"]\n",
+    "# Create a `scarlet.PSF` object\n",
+    "model_psf = scarlet.GaussianPSF(sigma=0.9)\n",
     "\n",
     "# Create the initial frame (metadata for the model).\n",
-    "frame = scarlet.frame(\"...\")\n",
+    "frame2 = scarlet.Frame(cube.shape, psfs=model_psf, channels=filters)\n",
     "\n",
     "# Create our observation\n",
-    "observation = scarlet.Observation(\"...\").match(frame)"
+    "observation2 = scarlet.Observation(cube, \n",
+    "                                   psfs=scarlet.ImagePSF(psfs), \n",
+    "                                   channels=filters, \n",
+    "                                   weights=weights2).match(frame2)"
    ]
   },
   {
@@ -868,13 +890,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"You're on your own here, you'll have to declare the sources\n",
-    "...\n",
-    "\"\"\"\n",
+    "sources2 = []\n",
+    "for i in range(len(cat)):\n",
+    "    if i in [3,13,18,20]:\n",
+    "        source = scarlet.ExtendedSource(frame2, \n",
+    "                                        (cat[i]['y'], cat[i]['x']), \n",
+    "                                        observation2, \n",
+    "                                        K=2) \n",
     "\n",
-    "scarlet.display.show_scene(sources, \n",
+    "    else:\n",
+    "        source = scarlet.PointSource(frame2, \n",
+    "                                        (cat[i]['y'], cat[i]['x']), \n",
+    "                                        observation2) \n",
+    "    sources2.append(source)    \n",
+    "\n",
+    "scarlet.display.show_scene(sources2, \n",
     "                           norm = norm, \n",
-    "                           observation=observation, \n",
+    "                           observation=observation2, \n",
     "                           show_observed=True)\n",
     "plt.show()"
    ]
@@ -894,8 +926,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "blend = scarlet.Blend(sources, observation)\n",
-    "%time blend.fit(200, e_rel = 1e-3)\n",
+    "blend = scarlet.Blend(sources2, observation2)\n",
+    "%time blend.fit(200, e_rel = 1e-6)\n",
     "print(\"scarlet ran for {0} iterations to logL = {1}\".format(len(blend.loss), -blend.loss[-1]))\n",
     "plt.plot(-np.array(blend.loss))\n",
     "plt.xlabel('Iteration')\n",
@@ -908,9 +940,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Display \n",
-    "...\n",
-    "\"\"\""
+    "scarlet.display.show_scene(sources2, norm=norm,linear=True, \n",
+    "                           observation=observation2, \n",
+    "                           show_residual=True\n",
+    "                          )\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display the initial guess for each source\n",
+    "scarlet.display.show_sources(sources2,\n",
+    "                             norm=norm,\n",
+    "                             observation=observation2,\n",
+    "                             show_rendered=True,\n",
+    "                             show_observed=True,\n",
+    "                             add_boxes = True)\n",
+    "plt.show()"
    ]
   }
  ],
